`gpgconf --homedir $x --kill keyboxd` doesn't appear to terminate a running keyboxd
Closed, ResolvedPublic

Assigned To
Authored By
dkg
Mar 14 2025, 7:24 PM
Subscribers

Description

I expected gpgconf --homedir $x --kill keyboxd to terminate a running keyboxd daemon.

This does not appear to work with 2.4.7:

0 dkg@bob:~$ mkdir -m 0700 /tmp/gg
0 dkg@bob:~$ echo use-keyboxd > /tmp/gg/common.conf
0 dkg@bob:~$ gpg --homedir /tmp/gg --list-keys
gpg: /tmp/gg/trustdb.gpg: trustdb created
0 dkg@bob:~$ find /tmp/gg/
/tmp/gg/
/tmp/gg/public-keys.d
/tmp/gg/public-keys.d/pubring.db
/tmp/gg/public-keys.d/pubring.db.lock
/tmp/gg/public-keys.d/.#lk0x00007f1fc8002290.bob.1154303
/tmp/gg/trustdb.gpg
/tmp/gg/common.conf
0 dkg@bob:~$ lsof /tmp/gg/public-keys.d/*
COMMAND     PID USER FD   TYPE DEVICE SIZE/OFF   NODE NAME
keyboxd 1154303  dkg 7u   REG   0,34    65536 984130 /tmp/gg/public-keys.d/pubring.db
1 dkg@bob:~$ gpgconf --homedir /tmp/gg --kill keyboxd
0 dkg@bob:~$ lsof /tmp/gg/public-keys.d/*
COMMAND     PID USER FD   TYPE DEVICE SIZE/OFF   NODE NAME
keyboxd 1154303  dkg 7u   REG   0,34    65536 984130 /tmp/gg/public-keys.d/pubring.db
1 dkg@bob:~$

Details

Version
2.4.7

Event Timeline

similarly, gpgconf --homedir /tmp/gg --kill all does not terminate keyboxd, despite the fact that gpgconf(1) says:

--kill [component]
-K

Kill the given component that runs as a daemon, including gpg-agent, dirmngr, and scdaemon. A component which does not run as a daemon will be ignored. Using "all" for component kills all components running as daemons. Note that as of now reload and kill have the same effect for scdaemon.

and the enumeration from gpgconf --list-components does indeed list keyboxd.

FWIW: It does works when using GNUPGHOME instead.

werner claimed this task.