gpgconf: Fix reload and kill of keyboxd.

* tools/gpgconf-comp.c (keyboxd_runtime_change): Fix order of args.
--

Fixes-commit: acaeba2dbdb9bbd68a823c671d5c3577fef5d26d
GnuPG-bug-id: 7569